--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "start": "nodemon app",
+    "build": "npm test"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.19.1",
     "nodemon": "^2.0.2"
   },
   "dependencies": {
