--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "hbs": "^4.0.6",
+    "html-metadata-parser": "^1.0.1",
     "socket.io": "^2.3.0"
   }
 }
