--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "hbs": "^4.0.6",
     "html-metadata-parser": "^1.0.1",
+    "mysql": "^2.17.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.3",
     "socket.io": "^2.3.0"
   }
 }
